Changelog
=========

1.0.3 (unreleased)
------------------

- Nothing changed yet.


1.0.2 (2013-05-28)
------------------

- Fixed querytarget of livesearch for Plone 4.2 and later.
  Use our @@livesearch_reply view instead of livesearch_reply.
  [buchi]

- Include description in snippetText.
  [buchi]

- If there's a SearchableText indexer, use it for snippetText generation.
  [buchi]

- Make length of breadcrumbs shown in search results configurable.
  [buchi]

- Added option to generate breadcrumbs from path rather than calling
  breadcrumbs_view for each item.
  [buchi]

- Added support for dexterity content types in snippetText indexer.
  [buchi]


1.0.1 (2013-05-21)
------------------

- Monkey patching c.solr.search.Search.buildQuery in order to escape slahes in paths.
  [lgraf]

- Overwrite search extender: Add write permissions, fixed translations and
  allowed content types in textfield.
  [Julian Infanger]

- Added option to scale Word Cloud by a constant factor.
  [lgraf]

- Added basic portlet to display Word Cloud.
  [lgraf]

- Added basic Word Cloud browser view.
  [lgraf]


1.0a1 (2012-08-22)
------------------

- Initial release