@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>1002</version>
+    <version>1003</version>
     <dependencies>
         <dependency>profile-collective.solr:default</dependency>
         <dependency>profile-plone.app.search:default</dependency>
