@@ -29,11 +29,30 @@
       handler="ftw.solr.upgrades.to1002.Upgrades"
       profile="ftw.solr:default"
       />
+
+  <genericsetup:upgradeStep
+      title="Update registry"
+      description=""
+      source="1002"
+      destination="1003"
+      handler="ftw.solr.upgrades.to1003.Upgrades"
+      profile="ftw.solr:default"
+      />
+
   <genericsetup:registerProfile
       name="1002"
       title="ftw.solr.upgrades.1002"
       description=""
       directory="profiles/1002"
+      for="Products.CMFPlone.interfaces.IMigratingPloneSiteRoot"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
+
+  <genericsetup:registerProfile
+      name="1003"
+      title="ftw.solr.upgrades.1003"
+      description=""
+      directory="profiles/1003"
       for="Products.CMFPlone.interfaces.IMigratingPloneSiteRoot"
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
